bail if no Opera profile to migrate. patch by eric@5stops.com. bug 236673 r=ben